# stevedore-examples

./: .gitignore  README.md
driver_manager/: README.md
driver_manager/src_a/: setup.cfg
driver_manager/src_a/test_driver_json/: __init__.py
driver_manager/src_a/test_driver_json_mod/: __init__.py
driver_manager/src_b/: setup.cfg
driver_manager/src_b/test_driver_plain/: __init__.py
driver_manager/src_b/test_driver_plain_mod/: __init__.py
driver_manager/src_mgr/: setup.cfg
driver_manager/src_mgr/test_driver_mgr/: __init__.py
hook_manager/: README.md
hook_manager/src_a/: setup.cfg
hook_manager/src_a/test_hook_a/: __init__.py
hook_manager/src_b/: setup.cfg
hook_manager/src_b/test_hook_b/: __init__.py
hook_manager/src_mgr/: setup.cfg
hook_manager/src_mgr/test_hook_mgr/: __init__.py
