[metadata]
# `test_driver_json` is the name of the pip package
# for example if it were published to pypi, you would do `pip install test_driver_json`
name = test_driver_json
version = 1.0

[options]
# here, `test_driver_json` is the name of the python module containing the sources
# it's named the same as the pip package (see above), but it's not mandatory
packages = test_driver_json

[options.entry_points]
# `plugin_test_driver` is the namespace chosen by our plugin manager
# this driver should register itself to `plugin_test_driver`
plugin_test_driver =
    # in the namespace `plugin_test_driver`, this plugin shall be uniquely identified as `json`
    # the plugin exports a `format` function, from the `test_driver_json` module
    json = test_driver_json:format
