[metadata]
# `test_driver_plain_pip` is the name of the pip package
# for example if it were published to pypi, you would do `pip install test_driver_plain_pip`
name = test_driver_plain_pip
version = 1.0

[options]
# `test_driver_plain_mod` is the name of the python module containing the sources
# of `test_driver_plain_pip` package
packages = test_driver_plain_mod

[options.entry_points]
# `plugin_test_driver` is the namespace chosen by our plugin manager
# this driver should register itself to `plugin_test_driver`
plugin_test_driver =
    # in the namespace `plugin_test_driver`, this plugin shall be uniquely identified as `plain`
    # the plugin exports a `format` function, from the `test_driver_plain_mod` module
    plain = test_driver_plain_mod:format
