[metadata]
# `test_driver` is the name of the pip package
# for example if it were published to pypi, you would do `pip install test_driver`
name = test_driver
version = 1.0

[options]
# `test_driver_mgr` is the name of the python module containing the sources
# of `test_driver` package
packages = test_driver_mgr
install_requires = stevedore

[options.entry_points]
# a (console) command will be installed in ~/.local/bin or <venv>/bin
# the command is `test-driver`
# when launched, it will run python `test_driver_mgr` module's `main` function
console_scripts =
    test-driver = test_driver_mgr:main
