[metadata]
# `test_driver_pip` is the name of the pip package
# for example if it were published to pypi, you would do `pip install test_driver_pip`
name = test_driver_pip
version = 1.0

[options]
# `test_driver_mgr_mod` is the name of the python module containing the sources
# of `test_driver_pip` package
packages = test_driver_mgr_mod
install_requires = stevedore

[options.entry_points]
# a (console) command will be installed in ~/.local/bin or <venv>/bin
# the command is `test-driver`
# when launched, it will run python `test_driver_mgr_mod` module's `main` function
console_scripts =
    test-driver = test_driver_mgr_mod:main
